# yaml-yugi-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
.sdk/def/: yaml-yugi_0.1.0.json
.sdk/model/: sdk.aontu  sdk.json  sdk.jsonic
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  yaml-yugi.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
go/core/: config.go  context.go  (+6 more)
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  yaml-yugi.rockspec  yaml-yugi_sdk.lua  yaml-yugi_types.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  config.php  features.php  yamlyugi_sdk.php
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  yamlyugi_sdk.py  yamlyugi_types.py
py/core/: context.py  error.py  helpers.py  operation.py  response.py  result.py  utility_type.py
py/entity/: aggregation_entity.py  card_entity.py  individual_card_entity.py  series_and_archetype_entity.py  series_entity.py  skill_card_entity.py  skill_entity.py
py/feature/: netsim_feature.py  ratelimit_feature.py  streaming_feature.py  telemetry_feature.py  test_feature.py
py/test/: feature_harness.py  runner.py  test_aggregation_direct.py  test_aggregation_entity.py  test_card_direct.py  test_card_entity.py  test_exists.py  test_feature.py  test_individual_card_direct.py  test_individual_card_entity.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_series_and_archetype_direct.py  test_series_and_archetype_entity.py  test_series_direct.py  test_series_entity.py  test_skill_card_direct.py  test_skill_card_entity.py  test_skill_direct.py  test_skill_entity.py
py/utility/: clean.py  done.py  feature_hook.py  feature_init.py  make_context.py  make_fetch_def.py  make_options.py  make_point.py  make_request.py  make_spec.py  param.py  prepare_auth.py  prepare_body.py  prepare_headers.py  prepare_method.py  prepare_query.py  register.py  result_headers.py
rb/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  YamlYugi_sdk.gemspec  YamlYugi_sdk.rb  YamlYugi_types.rb  config.rb  features.rb
ts/: AGENTS.md  CLAUDE.md  LICENSE  README.md  REFERENCE.md  package.json
(+493 files in other folders)
